Bug 1809221 - Don't use Tablet UA even if Tablet device. r=geckoview-reviewers,necko-reviewers,owlish a=RyanVM

Until fixing bug 1798617, tablet detection was always broken.

We returns Tablet UA if tablet device runs on Fennec., but GeckoView doens't
want tablet UA even if tablet device.

So I will remove Tablet UA code on GeckoView.

Notes: Although `ANDROID` means KaiOS or GeckoView, since KaiOS has forked
repository and they don't seems to have tablet, so remove tablet UA code for
both.

Differential Revision: https://phabricator.services.mozilla.com/D166415